# fhir-x-synthea_csv

./: .gitignore  LICENSE.txt  README.md  REVERSE_MAPPINGS.md  TESTING.md  example_bundle.json  example_usage.py  hello.py  pyproject.toml  run_tests.py  test_runner.py
fhir_x_synthea/fhir_mappers/: allergy.py  careplan.py  claims_transactions.py  condition.py  device.py  encounter.py  imaging_study.py  immunization.py  medication.py  observation.py  organization.py  payer.py  payer_transitions.py  procedure.py
fhir_x_synthea/synthea_csv_mappers/: medication.py  organization.py
fhir_x_synthea_csv/: __init__.py  fhir_lib.py  synthea_csv_lib.py
fhir_x_synthea_csv/common/: __init__.py  lexicons.py  reverse_lexicons.py  reverse_transformers.py  transformers.py
fhir_x_synthea_csv/fhir_mappers/: allergy.py  claims.py  patient.py  provider.py  supply.py
fhir_x_synthea_csv/synthea_csv_mappers/: allergy.py  careplan.py  claims.py  claims_transactions.py  device.py  encounter.py  imaging_study.py  payer.py  payer_transitions.py  supply.py
fhir_x_synthea_csv/to_fhir/: __init__.py  allergy.py  careplan.py  claim.py  claims_transactions.py  condition.py  device.py  encounter.py  imaging_study.py  immunization.py  medication.py  observation.py  organization.py  patient.py  payer.py  payer_transitions.py  procedure.py  provider.py  supply.py
specs/: README.md
tests/: __init__.py  conftest.py  loaders.py  test_batch_validation.py  test_condition_mapping.py  test_observation_mapping.py  test_patient_mapping.py  test_roundtrip_mappings.py  validators.py
(+63 files in other folders)
